[package]
name = "solana-svm-fuzz-harness-fixture"
description = "Solana SVM fuzz harness fixture."
documentation = "https://docs.rs/solana-svm-fuzz-harness-fixture"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
agave-feature-set = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-instruction-error = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true, features = ["std"] }
solana-stable-layout = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[lints]
workspace = true
