[package]
name = "solana-svm-fuzz-harness-instr"
description = "Solana SVM fuzz harness instruction entrypoint."
documentation = "https://docs.rs/solana-svm-fuzz-harness-instr"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "test_exec_instr"
path = "bin/test_exec_instr.rs"

[dependencies]
agave-feature-set = { workspace = true }
agave-precompiles = { workspace = true }
agave-syscalls = { workspace = true }
bincode = { workspace = true }
clap = { version = "4.5.2", features = ["derive"] }
prost = { workspace = true }
solana-account = { workspace = true }
solana-builtins = { workspace = true }
solana-clock = { workspace = true, features = ["sysvar"] }
solana-compute-budget = { workspace = true }
solana-epoch-schedule = { workspace = true, features = ["sysvar"] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-instruction-error = { workspace = true }
solana-last-restart-slot = { workspace = true, features = ["sysvar"] }
solana-precompile-error = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true, features = ["sysvar"] }
solana-sdk-ids = { workspace = true }
solana-stable-layout = { workspace = true }
solana-svm = { workspace = true }
solana-svm-callback = { workspace = true }
solana-svm-fuzz-harness-fixture = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-timings = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-transaction-context = { workspace = true }

[lints]
workspace = true
